--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ limitations under the License. */
 
 @use "@material";
 body {
-  font-family: roboto;
+  /*font-family: roboto;*/
   margin: 2em;
-  color: #3d3d3d;
-  --mdc-theme-primary: #007f8b;
-  --mdc-theme-on-primary: #f1f3f4;
+  color: black;
+  --mdc-theme-primary: black;
+  --mdc-theme-on-primary: white;
 }
 
 h1 {
