手势图片逐渐消失，与视频对齐

--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ section {
   transition: opacity 500ms ease-in-out;
 }
 
+#gestureImg{
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
 .removed {
   display: none;
 }
