视角修正，展示视频添加实景，增加凤纹

--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ h2 {
 video {
     clear: both;
     display: block;
-    transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
+    /*transform: rotateY(180deg);*/
+    /*-webkit-transform: rotateY(180deg);*/
+    /*-moz-transform: rotateY(180deg);*/
     height: 280px;
 }
 
