--- a/style.css
+++ b/style.css
@@ -134,3 +134,18 @@ section {
     width: 100%;
     font-size: calc(8px + 1.2vw);
 }
+
+.g-container {
+    width: 160px;
+    height: 5px;
+    border-radius: 25px;
+    /*background: #eee;*/
+    border: solid #eee;
+}
+.g-progress {
+    width: 0;
+    height: inherit;
+    border-radius: 25px 0 0 25px;
+    background: #ffffff;
+    transition: width .2s linear;
+}
