--- a/style.css
+++ b/style.css
@@ -141,11 +141,14 @@ section {
     border-radius: 25px;
     /*background: #eee;*/
     border: solid #eee;
+    transition: opacity 500ms ease-in-out;
+    margin: 1%;
 }
 .g-progress {
     width: 0;
     height: inherit;
     border-radius: 25px 0 0 25px;
     background: #ffffff;
-    transition: width .2s linear;
+    transition: width .1s linear;
+
 }
